[gd_scene load_steps=4 format=2]

[ext_resource path="res://MenuBackground.tscn" type="PackedScene" id=1]
[ext_resource path="res://states/MainMenuState.gd" type="Script" id=2]
[ext_resource path="res://MenuPanel.tscn" type="PackedScene" id=4]

[node name="MainMenuState" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuBackground" parent="." instance=ExtResource( 1 )]

[node name="MenuPanel" parent="." instance=ExtResource( 4 )]

[node name="HostButton" type="Button" parent="MenuPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 160.0
margin_right = -200.0
margin_bottom = -355.0
rect_scale = Vector2( 2, 2 )
text = "Host Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinButton" type="Button" parent="MenuPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 250.0
margin_right = -200.0
margin_bottom = -265.0
rect_scale = Vector2( 2, 2 )
text = "Join Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="MenuPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 340.0
margin_right = -200.0
margin_bottom = -175.0
rect_scale = Vector2( 2, 2 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}
